# Temp

./: .gitignore  .replit  README.ME  README.md  app.py  pyproject.toml  replit.nix
.streamlit/: config.toml  style.css
attached_assets/: Pasted-Detailed-Team-Metrics-streamlit-runtime-caching-cache-errors-UnhashableParamError-Cannot-hash-argu-1743090794317.txt  Pasted-You-are-an-expert-Streamlit-developer-working-on-a-Formula-1-analytics-dashboard-Your-current-code--1743082529260.txt  Pasted-You-are-an-expert-Streamlit-developer-working-on-a-Formula-1-analytics-dashboard-Your-current-code--1743082590792.txt  Pasted-streamlit-runtime-caching-cache-errors-UnhashableParamError-Cannot-hash-argument-laps-df-of-type-1743083321492.txt  Pasted-streamlit-runtime-caching-cache-errors-UnhashableParamError-Cannot-hash-argument-laps-df-of-type-1743090764048.txt  Pasted-streamlit-runtime-caching-cache-errors-UnhashableParamError-Cannot-hash-argument-laps-df-of-type-1743090811510.txt  Pasted-treamlit-runtime-caching-cache-errors-UnhashableParamError-Cannot-hash-argument-laps-df-of-type--1743090905762.txt
cache/2018/2018-04-15_Chinese_Grand_Prix/2018-04-15_Race/: race_control_messages.ff1pkl
cache/2018/2018-04-29_Azerbaijan_Grand_Prix/2018-04-29_Race/: race_control_messages.ff1pkl
cache/2018/2018-05-13_Spanish_Grand_Prix/2018-05-13_Race/: race_control_messages.ff1pkl
pages/: driver_analysis.py  home.py  machine_learning.py  notifications.py  race_strategy.py  team_analysis.py
utils/: data_loader.py  ml_models.py  notifications.py  statistics.py  visualizations.py
(+103 files in other folders)
